# MorAccuracy

./: .gitignore  README.md  config.example.json  index.html  netlify.toml  package-lock.json  package.json  pyproject.toml
morscout_accuracy/: __init__.py  __main__.py  analyzer.py
netlify/functions/: _google-sheets-client.mjs  _sheet-source-config.mjs  google-sheet-accuracy-update.mjs  google-sheet-data.mjs  google-sheet-sources.mjs  tba-event-data.mjs
output/: entry_details.csv  leaderboard.csv  summary.json
public/: site.webmanifest
sample_data/: benchmarks.csv  scouting.csv
src/: main.js  styles.css
src/modules/: analyzer.js
tests/: analyzer.test.js  test_analyzer.py
