[project]
name = "morscout-accuracy"
version = "0.1.0"
description = "Analyze MorScout scouting accuracy against Statbotics-style benchmarks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
